# 3d-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  compile.sh  tags
include/: app.hpp  buffer.hpp  camera.hpp  descriptor.hpp  engine_device.hpp  frame_info.hpp  keyboard_move_controller.hpp  model.hpp  pipeline.hpp  point_light_system.hpp  render_system.hpp  renderer.hpp  scene_object.hpp  swap_chain.hpp  utils.hpp  window.hpp
shader/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: CMakeLists.txt  app.cpp  buffer.cpp  camera.cpp  descriptor.cpp  engine_device.cpp  keyboard_move_controller.cpp  main.cpp  model.cpp  pipeline.cpp  point_light_system.cpp  render_system.cpp  renderer.cpp  scene_object.cpp  swap_chain.cpp  window.cpp
